Added a training page along with a link to my Treehouse badges.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<ul class="nav">
 		<li><a href="index.html" title="Read about me" class="selected">Home</a></li>
 		<li><a href="resume.html" title="My resume">Resume</a></li>
+		<li><a href="training.html" title="My Training">Training</a></li>
 		<li><a href="contact.html" title="Contact information">Contact</a></li>
 	</ul>
 	
