--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
 	<ul class="nav">
 		<li><a href="index.html">Home</a></li>
 		<li><a href="resume.html">Resume</a></li>
+		<li><a href="training.html" title="My Training">Training</a></li>
 		<li><a href="contact.html" class="selected">Contact</a></li>
 	</ul>
 	
