--- a/resume.html
+++ b/resume.html
@@ -10,6 +10,7 @@
     <ul class="nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="resume.html" class="selected">Resume</a></li>
+	    <li><a href="training.html" title="My Training">Training</a></li>
             <li><a href="contact.html">Contact</a></li>
     </ul>
 	
@@ -169,23 +170,7 @@
 		    <h4>Education:</h4>
 		    <hr>
 		    <p>1971 Western Kentucky University - Bachelor of Science Business Administration</p>
-		    JCPS Lifelong Learning Certificates:
-		    <dl>
-			<li>
-			    Intermediate Visual Basic
-			</li>
-			<li>
-			    Introduction to ASP.NET
-			</li>
-			<li>
-			    Creating Mobile Apps with HTML5
-			</li>
-			<li>
-			    Introduction to CSS3 and HTML5
-			</li>
-		    </dl>
-		    <p>I have completed the Code Louisville project - Front-end Web Development sponsored by KentuckianaWorks.</p>
-		    <p>I am currently taking the Web Design track in the Treehouse software.</p>
+		    <p>Visit my training page to view training I have taken.</p>
 		</div>
 	</div>
 	
